# vertex_timing

./: .clang-tidy  .gitignore  .projectile  AutoDict_vector_vector_int____cxx.d  AutoDict_vector_vector_int____cxx_ACLiC_dict_rdict.pcm  CLAUDE.MD  CMakeLists.txt  DBSCAN.ipynb  LinkDef.h  PILEUP_REMOVAL_ANALYSIS.md  README.md  analyze_pileup_removal.py  check_jet_sorting.cxx  clustering_animation.py  clustering_dt.cxx  clustering_functions.h  clustering_includes.h  clustering_structs.h  clustering_utilities.h  compile_commands.json  complicated_dt.cxx  event_display.py  event_display_VBF_R25.py  event_processing.h  event_tinkering.py  find_misclustering.py  generate_dt.cxx  generate_dt_tracks.cxx  generate_ntracks.cxx  generate_onefile_timeplot.cxx  generate_res_v_fjets.cxx  generate_res_v_tracks.cxx  generate_rpt.cxx  generate_timeplot.cxx  ideal_hgtd_efficiency.cxx  ideal_hgtd_resolution.cxx  my_utilities.h  pdf_to_jpg.sh  plotting_utilities.h  runHGTD_Clustering.cxx  (+7 more)
.claude/: settings.local.json
condor/: clustering_dt.sub  rpt_v5.sub  run_analysis.sh
old/: common_includes.h  generate_dt.cxx  ideal_hgtd_efficiency.cxx
python/: clustering_animation.py  event_display.py  event_tinkering.py  runHGTD_Clustering.cxx
share/: README.md
share/docs/: ERROR_ANALYSIS_PLAN.md  ML_FEATURE_EXTRACTION.md  ML_MODEL_INTEGRATION.md  ML_QUICK_START.md  ONNX_INTEGRATION_GUIDE.md  SUMMARY.md  VBF_CUT_LOOSENING_SUMMARY.md  VBF_FSR_IMPLEMENTATION.md  VBF_IMPLEMENTATION_SUMMARY.md  VBF_SELECTION_README.md
share/docs/dscb_reference_plots/: README.md
share/models/: TMVA.VBFinv.mu200.Step3p1.8var.weights.xml  model.onnx  model_weights.json  normalization_params.json
share/scripts/: export_onnx_model.py  inspect_onnx_model.py  model_evaluation_helper.py  test_onnx_model.C
share/scripts/old/: clustering_dt.cxx  clustering_utilities.h
src/: AtlasLabels.h  AtlasStyle.h  clustering_constants.h  clustering_dt.cxx  clustering_functions.h  clustering_includes.h  clustering_structs.h  cone_iter_k_sweep.cxx  dist_refine_sweep.cxx  distcut_sweep.cxx  evaluate_ml_lowtrack.cxx  event_processing.h  export_training_data.cxx  extract_error_metrics.cxx  fail_decomp.bak  failure_decomposition.cxx  generate_rpt.cxx  hgtd_matching.cxx  maxtrackpt_sweep.cxx  mintrackpt_sweep.cxx  ml_model.h  plotting_utilities.h  sample_config.h  suppress_stdout.h  sweep_utilities.h  test_ml_model.cxx  trackpt_sweep.cxx
util/: cone_iter_k_sweep.cxx  dist_refine_sweep.cxx  distcut_sweep.cxx  evaluate_ml_lowtrack.cxx  export_training_data.cxx  extract_error_metrics.cxx  failure_decomposition.cxx  generate_rpt.cxx  generate_rpt.cxx.old  hgtd_matching.cxx  maxpt_jet_test.cxx  mintrackpt_sweep.cxx  nsigma_sweep.cxx  rate_diagnostics.cxx  rpt_v2.cxx  rpt_v3.cxx  rpt_v4.cxx  rpt_v5.cxx  story_plot.py  sweep_utilities.h  timing_diag.cxx  track_dt.cxx  trkptz_alpha_sweep.cxx  trkptz_resunits_sweep.cxx  ttreemt_prototype.cxx  vtx_diag.cxx
